Harden PR review execution and cancellation